# cpp-game-project

./: .clang-format  CMakeLists.txt  README.md
cmake/: Conan.cmake
src/: CMakeLists.txt  ImGuiHelpers.h  event.h  event_handler.cpp  event_handler.h  event_recorder.cpp  event_recorder.h  event_serialize.cpp  event_serialize.h  event_sfml.cpp  event_sfml.h  game_state.cpp  game_state.h  input.h  input_joystick.h  main.cpp  render.cpp  render.h  utility.h
